# MLawson-Applied-AI-Midterm

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
data/splits/: test.csv  train.csv
notebooks/: 01_data_preparation.ipynb  02_classifier_a.ipynb  03_srgan_training.ipynb  04_generate_srgan_images.ipynb  05_classifier_b.ipynb  06_model_comparison.ipynb
reports/metrics/: model_a_training_history.json  model_b_training_history.json  model_comparison.csv  model_comparison.json  srgan_training_history.json  test_predictions.csv
scripts/: generate_model_b.py  prepare_data.py
src/applied_ai_midterm/: __init__.py  classifier.py  config.py  data.py  datasets.py  evaluation.py  generation.py  model_b.py  srgan.py  srgan_data.py  srgan_training.py  training.py  transforms.py
tests/: __init__.py  test_classifier.py  test_config.py  test_data.py  test_evaluation.py  test_generation.py  test_model_b.py  test_srgan.py
