[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "applied-ai-midterm"
version = "0.1.0"
description = "A reproducible comparison of baseline and SRGAN-assisted image classifiers."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "pillow>=10.4",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "torch>=2.4",
    "torchvision>=0.19",
    "tqdm>=4.66",
]

[project.optional-dependencies]
notebooks = ["ipykernel>=6.29", "jupyter>=1.1"]
dev = ["pytest>=8.3", "ruff>=0.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

